--- a/templates/base.html
+++ b/templates/base.html
@@ -7,9 +7,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>
-        {% block title %}Chat System{% endblock %}
-    </title>
+    <title> {% block title %}Chat System{% endblock %}</title>
+
+     <!-- CSS Stylesheet -->
+    <link rel="stylesheet" href="{% static './css/form.css' %}" type="text/css">
 </head>
 <body>
 
@@ -17,7 +18,7 @@
 {% block body %} {% endblock %}
 
     <!--JS Files-->
-    <script src="{% static 'js/main.js' %}"></script>
+    <script src="{% static './js/main.js' %}"></script>
 
 </body>
 </html>
