JS Dropdown Hide and Show fix

--- a/templates/chat.html
+++ b/templates/chat.html
@@ -123,9 +123,9 @@
                         </div> -->
                     </div>
 
-
+                    <!-- Dropdown Menu -->
                     <li>
-                        <ion-icon class="dropbtn" name="ellipsis-vertical" onclick="dropDpwnMenu1()"></ion-icon>
+                        <ion-icon data-id="myDropdown1" class="dropbtn" name="ellipsis-vertical"></ion-icon>
                     </li>
                     <div class="dropdown-content" id="myDropdown1">
                         <a href="#">New chat</a>
@@ -247,7 +247,7 @@
 
                     <!-- dropdown menu -->
                     <li>
-                        <ion-icon class="dropbtn" name="attach-outline" onclick="dropDpwnMenu3()"></ion-icon>
+                        <ion-icon class="dropbtn" name="attach-outline" data-id="myDropdown3"></ion-icon>
                     </li>
                     <div class="dropdown-content" id="myDropdown3">
                         <a href="#" onclick="chooseImage()">Image
@@ -261,7 +261,7 @@
 
                     <!-- dropdown icon -->
                     <li>
-                        <ion-icon class="dropbtn" name="ellipsis-vertical" onclick="dropDpwnMenu2()"></ion-icon>
+                        <ion-icon class="dropbtn" name="ellipsis-vertical" data-id="myDropdown2"></ion-icon>
                     </li>
                     <div class="dropdown-content" id="myDropdown2">
                         <a href="#">Delete</a>
