--- a/frontend/css/chat.css
+++ b/frontend/css/chat.css
@@ -50,7 +50,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: url('./img/doodles.png');
+  background: url(doodles.png);
   opacity: 0.2;
 }
 
@@ -488,8 +488,13 @@
 
 .modal-footer {
   padding: 2px 16px;
-  background-color: #5cb85c;
-  color: white;
+  background-color: #fff;
+  /* color: white; */
+}
+
+.footer-button {
+  display: flex;
+  justify-content: center;
 }
 
 /* Responsive Design */
