--- a/templates/chat-group.html
+++ b/templates/chat-group.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ChatApp</title>
+    <title>Chat Groups</title>
 
     <!-- CSS Stylesheet -->
      <link rel="stylesheet" href="{% static './css/chat.css' %}" type="text/css">
+     <link rel="stylesheet" href="{% static './css/create-group.css' %}" type="text/css">
 
 </head>
 
@@ -20,7 +21,7 @@
             <!-- header -->
             <div class="main-header">
                 <div class="user_img">
-                   <img src="{% static './images/avatar1.png' %}" alt="User Image" class="cover">
+                    <img src="{% static './images/avatar1.png' %}" alt="User Image" class="cover">
                 </div>
                 <ul class="nav_icons">
                     <!-- <li>
@@ -38,7 +39,7 @@
                         <div class="modal-content">
                             <div class="modal-header">
                                 <span class="close">&times;</span>
-                                <h2>Friend List</h2>
+                                <h2>Group List</h2>
                             </div>
                             <div class="modal-body">
                                 <div class="chat_list">
@@ -46,16 +47,12 @@
                                     <div class="main-block active">
                                         <!-- img -->
                                         <div class="imgbox">
-                                           <img src="{% static './images/1.jpg' %}" alt="User Image" class="cover"><br>
+                                            <img src="{% static './images/1.jpg' %}" alt="User Image" class="cover"><br>
                                         </div>
                                         <!-- details -->
                                         <div class="details">
                                             <div class="list_head">
-                                                <h4>Faisal Malik</h4>
-                                            </div>
-                                            <!-- Message -->
-                                            <div class="message_p">
-                                                <p>We need to design a chat app as soon as possible</p>
+                                                <h4>Information</h4>
                                             </div>
                                         </div>
                                     </div>
@@ -64,56 +61,15 @@
                                     <div class="main-block unread-msg">
                                         <!-- img -->
                                         <div class="imgbox">
-                                           <img src="{% static './images/2.jpg' %}" alt="User Image" class="cover"><br>
-                                        </div>
-                                        <!-- details -->
-                                        <div class="details">
-                                            <div class="list_head">
-                                                <h4>Zaheer Niazi</h4>
-                                            </div>
-                                            <!-- Message -->
-                                            <div class="message_p">
-                                                <p>OK, I will try my level best!!</p>
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                    <!-- chat person block 3-->
-                                    <div class="main-block unread-msg">
-                                        <!-- img -->
-                                        <div class="imgbox">
-                                           <img src="{% static './images/1.jpg' %}" alt="User Image" class="cover"><br>
-                                        </div>
-                                        <!-- details -->
-                                        <div class="details">
-                                            <div class="list_head">
-                                                <h4>Imran Khan</h4>
-                                            </div>
-                                            <!-- Message -->
-                                            <div class="message_p">
-                                                <p>Come to my shop</p>
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                    <!-- chat person block 4 -->
-                                    <div class="main-block unread-msg">
-                                        <!-- img -->
-                                        <div class="imgbox">
                                             <img src="{% static './images/2.jpg' %}" alt="User Image" class="cover"><br>
                                         </div>
                                         <!-- details -->
                                         <div class="details">
                                             <div class="list_head">
-                                                <h4>Qurban Khan</h4>
-                                            </div>
-                                            <!-- Message -->
-                                            <div class="message_p">
-                                                <p>Please wait</p>
+                                                <h4>Stduy Group</h4>
                                             </div>
                                         </div>
                                     </div>
-
 
                                 </div>
                             </div>
@@ -128,9 +84,157 @@
                         <ion-icon data-id="myDropdown1" class="dropbtn" name="ellipsis-vertical"></ion-icon>
                     </li>
                     <div class="dropdown-content" id="myDropdown1">
-                        <a href="{% url 'chat:chat_group' %}">Open Groups</a>
+                        <a href="{% url 'chat:chat' %}">Open chat</a>
+                        <a href="#" id="myBtn2">Create group</a>
+                        <a href="#" id="myBtn3">Group friends</a>
                         <a href="#">Sign out</a>
                     </div>
+
+                    <!-- The Modal2 -->
+                    <div id="myModal2" class="modal">
+                        <!-- Modal content -->
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <span class="close">&times;</span>
+                                <h2>Create New Group</h2>
+                            </div>
+                            <div class="modal-body">
+                                <div class="container">
+                                    <form class="form" method="" action="">
+                                        <h2 class="form_title">Create Group</h2>
+                                        <input class="form_input" type="text" placeholder="Name">
+                                        <input class="form_input" type="text" placeholder="Description">
+                                        <button class="form_button submit">Create</button>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- The Modal3 -->
+                    <div id="myModal3" class="modal">
+                        <!-- Modal content -->
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <span class="close">&times;</span>
+                                <h2>Add/Remove friends</h2>
+                            </div>
+                            <div class="modal-body" style="width: 100%;">
+                                <div class="container" style="width:100%;">
+                                    <form class="form" method="" action="">
+                                        <h2 class="form_title">Group List</h2>
+                                        <div class="chat_list">
+                                            <!-- chat person block 1-->
+                                            <div class="main-block active">
+                                                <!-- img -->
+                                                <div class="imgbox">
+                                                    <img src="{% static './images/1.jpg' %}" alt="User Image" class="cover"><br>
+                                                </div>
+                                                <!-- details -->
+                                                <div class="details">
+                                                    <div class="list_head">
+                                                        <h4>Information</h4>
+                                                    </div>
+                                                </div>
+                                            </div>
+
+                                            <!-- chat person block 2 -->
+                                            <div class="main-block unread-msg">
+                                                <!-- img -->
+                                                <div class="imgbox">
+                                                    <img src="{% static './images/2.jpg' %}" alt="User Image" class="cover"><br>
+                                                </div>
+                                                <!-- details -->
+                                                <div class="details">
+                                                    <div class="list_head">
+                                                        <h4>Stduy Group</h4>
+                                                    </div>
+                                                </div>
+                                            </div>
+
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+
+                            <!-- 2 -->
+                            <div class="modal-body" style="width: 100%;">
+                                <div class="container" style="width: 100%;">
+                                    <form class="form" method="" action="">
+                                        <h2 class="form_title">Friend List</h2>
+                                        <div class="chat_list">
+                                            <!-- chat person block 1-->
+                                            <div class="main-block active">
+                                                <!-- img -->
+                                                <div class="imgbox">
+                                                    <img src="{% static './images/1.jpg' %}" alt="User Image" class="cover"><br>
+                                                </div>
+                                                <!-- details -->
+                                                <div class="details">
+                                                    <div class="list_head">
+                                                        <h4>Faisal Malik</h4>
+                                                    </div>
+
+                                                </div>
+                                            </div>
+
+                                            <!-- chat person block 2 -->
+                                            <div class="main-block unread-msg">
+                                                <!-- img -->
+                                                <div class="imgbox">
+                                                    <img src="{% static './images/2.jpg' %}" alt="User Image" class="cover"><br>
+                                                </div>
+                                                <!-- details -->
+                                                <div class="details">
+                                                    <div class="list_head">
+                                                        <h4>Zaheer Niazi</h4>
+                                                    </div>
+                                                </div>
+                                            </div>
+
+                                            <!-- chat person block 3-->
+                                            <div class="main-block unread-msg">
+                                                <!-- img -->
+                                                <div class="imgbox">
+                                                    <img src="{% static './images/1.jpg' %}" alt="User Image" class="cover"><br>
+                                                </div>
+                                                <!-- details -->
+                                                <div class="details">
+                                                    <div class="list_head">
+                                                        <h4>Imran Khan</h4>
+                                                    </div>
+                                                </div>
+                                            </div>
+
+                                            <!-- chat person block 4 -->
+                                            <div class="main-block unread-msg">
+                                                <!-- img -->
+                                                <div class="imgbox">
+                                                    <img src="{% static './images/2.jpg' %}" alt="User Image" class="cover"><br>
+                                                </div>
+                                                <!-- details -->
+                                                <div class="details">
+                                                    <div class="list_head">
+                                                        <h4>Qurban Khan</h4>
+                                                    </div>
+                                                </div>
+                                            </div>
+
+
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+
+                            <div class="modal-footer">
+                                <div class="footer-button">
+                                    <button class="form_button submit">Add</button>
+                                    <button class="form_button submit">Remove</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
                     <li class="menu-icon-li">
                         <a href="#" onclick="hideChatList()">
                             <ion-icon name="chevron-forward" class="forward-icon"></ion-icon>
@@ -157,7 +261,7 @@
                     <!-- details -->
                     <div class="details">
                         <div class="list_head">
-                            <h4>Faisal Malik</h4>
+                            <h4>Information</h4>
                             <p class="time">10:56</p>
                         </div>
                         <!-- Message -->
@@ -171,12 +275,12 @@
                 <div class="main-block unread-msg">
                     <!-- img -->
                     <div class="imgbox">
-                       <img src="{% static './images/2.jpg' %}" alt="User Image" class="cover"><br>
+                        <img src="{% static './images/2.jpg' %}" alt="User Image" class="cover"><br>
                     </div>
                     <!-- details -->
                     <div class="details">
                         <div class="list_head">
-                            <h4>Zaheer Niazi</h4>
+                            <h4>Study Group</h4>
                             <p class="time">10:57</p>
                         </div>
                         <!-- Message -->
@@ -187,44 +291,6 @@
                     </div>
                 </div>
 
-                <!-- chat person block 3-->
-                <div class="main-block unread-msg">
-                    <!-- img -->
-                    <div class="imgbox">
-                        <img src="{% static './images/1.jpg' %}" alt="User Image" class="cover"><br>
-                    </div>
-                    <!-- details -->
-                    <div class="details">
-                        <div class="list_head">
-                            <h4>Imran Khan</h4>
-                            <p class="time">10:56</p>
-                        </div>
-                        <!-- Message -->
-                        <div class="message_p">
-                            <p>Come to my shop</p>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- chat person block 4 -->
-                <div class="main-block unread-msg">
-                    <!-- img -->
-                    <div class="imgbox">
-                        <img src="{% static './images/2.jpg' %}" alt="User Image" class="cover"><br>
-                    </div>
-                    <!-- details -->
-                    <div class="details">
-                        <div class="list_head">
-                            <h4>Qurban Khan</h4>
-                            <p class="time">10:57</p>
-                        </div>
-                        <!-- Message -->
-                        <div class="message_p">
-                            <p>Please wait</p>
-                            <b>1</b>
-                        </div>
-                    </div>
-                </div>
 
             </div>
         </div>
@@ -237,7 +303,7 @@
                     <div class="user_img">
                         <img src="{% static './images/1.jpg' %}" alt="User Image" class="cover"><br>
                     </div>
-                    <h4>Faisal Malik<br><span>online</span></h4>
+                    <h4>Information</h4>
                 </div>
                 <ul class="nav_icons">
                     <li>
@@ -309,9 +375,6 @@
                     <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita tempore eaque atque dolore!
                         Magni vel at, incidunt, voluptate tempore illum quas accusamus delectus ab impedit rerum facilis
                         aliquid veniam fugit?<br><span>8:16</span></div>
-                </div>
-                <div class="message my_message">
-
                 </div>
             </div>
             <!-- Chat Input -->
