--- a/templates/chat-group.html
+++ b/templates/chat-group.html
@@ -84,7 +84,7 @@
                         <ion-icon data-id="myDropdown1" class="dropbtn" name="ellipsis-vertical"></ion-icon>
                     </li>
                     <div class="dropdown-content" id="myDropdown1">
-                        <a href="{% url 'chat:chat' %}">Open chat</a>
+                        <a href="{% url 'chat:chat_app' %}">Open chat</a>
                         <a href="#" id="myBtn2">Create group</a>
                         <a href="#" id="myBtn3">Group friends</a>
                         <a href="#">Sign out</a>
