--- a/templates/login.html
+++ b/templates/login.html
@@ -8,12 +8,22 @@
 
     <div class="main">
         <div class="container">
-            <form class="form" method="" action="">
+            {% if messages %}
+                                    {% for message in messages %}
+                                    <div class="alert alert-{{ message.tags }} alert-dismissible" role="alert">
+                                        <strong>Message : </strong> {{ message }}
+                                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>
+                                        </button>
+                                    </div>
+                                    {% endfor %} {% endif %}
+            <form class="form" method="post" action="">
+                {% csrf_token %}
                 <h2 class="form_title">Sign in to Website</h2>
-                <input class="form_input" type="text" placeholder="Email">
-                <input class="form_input" type="password" placeholder="Password">
+                <input name="username" class="form_input" type="text" placeholder="username" required>
+                <input name="password" class="form_input" type="password" placeholder="Password" required>
                 <a class="form_link" href="#">Forgot your password?</a>
-                <button class="form_button submit">SIGN IN</button>
+                <button type="submit" class="form_button submit">SIGN IN</button>
             </form>
         </div>
     </div>
