--- a/templates/login.html
+++ b/templates/login.html
@@ -8,22 +8,25 @@
 
     <div class="main">
         <div class="container">
-            {% if messages %}
-                                    {% for message in messages %}
-                                    <div class="alert alert-{{ message.tags }} alert-dismissible" role="alert">
-                                        <strong>Message : </strong> {{ message }}
-                                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                            <span aria-hidden="true">&times;</span>
-                                        </button>
-                                    </div>
-                                    {% endfor %} {% endif %}
+
             <form class="form" method="post" action="">
                 {% csrf_token %}
                 <h2 class="form_title">Sign in to Website</h2>
                 <input name="username" class="form_input" type="text" placeholder="username" required>
                 <input name="password" class="form_input" type="password" placeholder="Password" required>
                 <a class="form_link" href="#">Forgot your password?</a>
+                {% if messages %}
+                {% for message in messages %}
+                    <div class="alert alert-{{ message.tags }} alert-dismissible" role="alert" style="color: red">
+                        {{ message }}
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                {% endfor %}
+            {% endif %}
                 <button type="submit" class="form_button submit">SIGN IN</button>
+
             </form>
         </div>
     </div>
